WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56341
REGRESSION: Print preview is blank when selecting multiple pages per sheet
https://bugs.webkit.org/show_bug.cgi?id=56341
Summary
REGRESSION: Print preview is blank when selecting multiple pages per sheet
Alexey Proskuryakov
Reported
2011-03-14 15:48:21 PDT
1. Open Safari. 2. Go to
http://www.apple.com/ipad/specs/
3. File > Print. 4. Select Layout, and select 4 pages per sheet. 5. Observe that print preview is blank (possibly with headers and footers). <
rdar://problem/8991382
>
Attachments
proposed fix
(2.02 KB, patch)
2011-03-14 15:57 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-03-14 15:57:53 PDT
Created
attachment 85734
[details]
proposed fix
WebKit Commit Bot
Comment 2
2011-03-14 23:12:20 PDT
Comment on
attachment 85734
[details]
proposed fix Clearing flags on attachment: 85734 Committed
r81115
: <
http://trac.webkit.org/changeset/81115
>
WebKit Commit Bot
Comment 3
2011-03-14 23:12:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug