2011-03-14  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Darin Adler.

        REGRESSION: Print preview is blank when selecting multiple pages per sheet
        https://bugs.webkit.org/show_bug.cgi?id=56341
        <rdar://problem/8991382>

        * UIProcess/API/mac/WKPrintingView.mm: (pageDidDrawToPDF): Don't reset latest expected
        callback number after receiving a different one. We only update preview after receiving
        the latest expected page data (and the assumption is that AppKit will ask for pages in
        natural order for N-up).

Canonical link: https://commits.webkit.org/70995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81115 268f45cc-cd09-0410-ab3c-d52691b4dbfc